feat: add exporter, filter/export UI, dark mode, menu bar and icon